archivist: create pipeline form.

--- a/archivist/src/main/resources/templates/pipelines.html
+++ b/archivist/src/main/resources/templates/pipelines.html
@@ -25,6 +25,7 @@
             </tbody>
         </table>
     </div>
+    <div th:include="fragments/pipelines :: modal_create"/>
 </section>
 
 </body>
