--- a/archivist/src/main/resources/templates/fragments/pipelines.html
+++ b/archivist/src/main/resources/templates/fragments/pipelines.html
@@ -37,10 +37,10 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close">&times;</button>
-                    <h4 class="modal-title">Create Permission</h4>
+                    <h4 class="modal-title">Create Pipeline</h4>
                 </div>
                 <div class="modal-body">
-                    <form id="createForm" autocomplete="off" action="#" role="form" th:action="@{/gui/permissions}" th:object="${permSpec}" method="post">
+                    <form id="createForm" autocomplete="off" action="#" role="form" th:action="@{/gui/pipelines}" th:object="${pipelineSpec}" method="post">
                         <div class="form-group">
                             <label for="name">Name:</label>
                             <input type="text" th:field="*{name}" class="form-control" id="name" required="true"/>
@@ -48,7 +48,10 @@
                         </div>
                         <div class="form-group">
                             <label for="type">Type:</label>
-                            <input type="text" th:field="*{type}" class="form-control" id="type" required="true"/>
+                            <select th:field="*{type}" class="form-control" id="type">
+                                <option value="Import">Import</option>
+                                <option value="Export">Export</option>
+                            </select>
                             <div class="alert alert-danger" th:if="${#fields.hasErrors('type')}" th:errors="*{type}"></div>
                         </div>
                         <div class="form-group">
