--- a/archivist/src/main/resources/templates/pipeline.html
+++ b/archivist/src/main/resources/templates/pipeline.html
@@ -65,7 +65,6 @@
                     <div class="form-group">
                         <label for="description">Description:</label>
                         <input type="text" th:field="*{pipeline.description}" class="form-control" id="description" required="true"/>
-
                     </div>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="tab-args">
@@ -101,7 +100,7 @@
     </div>
     </div>
     </div>
-
+    <div th:include="fragments/pipelines :: modal_create"/>
     <script th:inline="javascript" type="text/javascript">
         //<![CDATA[
         // Simple list
