--- a/archivist/src/main/resources/templates/pipelines.html
+++ b/archivist/src/main/resources/templates/pipelines.html
@@ -7,7 +7,10 @@
 <body>
 
 <section layout:fragment="content">
-
+    <div th:if="${message}" class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">x</button>
+        <th:block th:text="${message}"></th:block>
+    </div>
     <div th:include="fragments/pipelines :: menu"/>
     <div class="wrapper">
         <table class="table table-striped table-hover">
@@ -26,6 +29,7 @@
         </table>
     </div>
     <div th:include="fragments/pipelines :: modal_create"/>
+    <div th:include="fragments/pipelines :: modal_import"/>
 </section>
 
 </body>
