archivist: add modal import include for pipeline.html

--- a/archivist/src/main/resources/templates/pipeline.html
+++ b/archivist/src/main/resources/templates/pipeline.html
@@ -106,6 +106,7 @@
     </div>
     </div>
     <div th:include="fragments/pipelines :: modal_create"/>
+    <div th:include="fragments/pipelines :: modal_import"/>
     <script th:inline="javascript" type="text/javascript">
         //<![CDATA[
         // Simple list
