archivist: added plugin MD5 to plugin web page.

--- a/archivist/src/main/resources/templates/plugins.html
+++ b/archivist/src/main/resources/templates/plugins.html
@@ -17,6 +17,7 @@
             <th>Publisher</th>
             <th>Description</th>
             <th>Language</th>
+            <th>Md5</th>
         </tr>
         </thead>
         <tbody>
@@ -26,6 +27,7 @@
             <td th:text="${plugin.publisher}"></td>
             <td th:text="${plugin.description}"></td>
             <td th:text="${plugin.language}"></td>
+            <td th:text="${plugin.md5}"></td>
         </tr>
         </tbody>
     </table>
