--- a/archivist/src/main/resources/templates/export.html
+++ b/archivist/src/main/resources/templates/export.html
@@ -36,11 +36,10 @@
                     <div class="panel-body">
                         <table class="table table-striped table-condensed no-margin">
                             <tbody>
-                            <tr><td>Total</td><td th:text="${job.stats.assetTotal}"></td></tr>
-                            <tr><td>Created</td><td th:text="${job.stats.assetCreated}"></td></tr>
-                            <tr><td>Updated</td><td th:text="${job.stats.assetUpdated}"></td></tr>
-                            <tr><td>Errors</td><td th:text="${job.stats.assetErrored}"></td></tr>
-                            <tr><td>Warnings</td><td th:text="${job.stats.assetWarning}"></td></tr>
+                            <tr><td>Total</td><td th:text="${job.stats.frameTotalCount}"></td></tr>
+                            <tr><td>Created</td><td th:text="${job.stats.frameSuccessCount}"></td></tr>
+                            <tr><td>Errors</td><td th:text="${job.stats.frameErrorCount}"></td></tr>
+                            <tr><td>Warnings</td><td th:text="${job.stats.frameWarningCount}"></td></tr>
                             </tbody>
                         </table>
                     </div>
