--- a/archivist/src/main/resources/templates/fragments/imports.html
+++ b/archivist/src/main/resources/templates/fragments/imports.html
@@ -68,7 +68,7 @@
                                 <div class="alert alert-danger" th:if="${#fields.hasErrors('pipelineId')}" th:errors="*{pipelineId}"></div>
                             </div>
 
-                            <button type="submit" class="btn btn-default">Create</button>
+                            <button id="btn-server-submit" type="submit" class="btn btn-default">Create</button>
                         </form>
                     </div>
                 </div>
@@ -158,6 +158,15 @@
                             + "<input type=\"hidden\" name=\"paths\" value=\"" + val + "\">");
                 }
             });
+
+            $('#btn-server-submit').click(function(e)  {
+                var paths = $('#pathList');
+                if (paths.children().length == 0) {
+                    alert("Your must add at least 1 path");
+                    e.preventDefault();
+                }
+            });
+
             $(document).on("click",".pathDeleteButton",function(){
                 $(this).parent().remove();
             });
