--- a/archivist/src/main/resources/templates/fragments/job.html
+++ b/archivist/src/main/resources/templates/fragments/job.html
@@ -33,5 +33,108 @@
     </div>
 </div>
 
+<div th:fragment="contextMenu">
+<div id="contextMenu" class="dropdown clearfix">
+    <ul class="dropdown-menu fa-ul" role="menu" aria-labelledby="dropdownMenu" style="display:block;position:static;margin-bottom:5px;">
+        <li><a tabindex="-1" id="li-view" href="#"><i class="glyphicon glyphicon-info-sign"></i>&nbsp;View</a></li>
+        <li class="divider"></li>
+        <li><a tabindex="-1" id="li-cancel" href="#">Cancel</a></li>
+        <li><a tabindex="-1" id="li-restart" href="#">Restart</a></li>
+        <li class="divider"></li>
+        <li><a tabindex="-1" id="li-retry-errors" href="#">Retry All Errors</a></li>
+    </ul>
+</div>
+<script th:inline="javascript" type="text/javascript">
+$(function() {
+
+    var contextMenu = $("#contextMenu");
+    var selected;
+
+    function hideContextMenu() {
+        selected = null;
+        contextMenu.hide();
+    }
+
+    function getSelectedJob() {
+        if (selected == null) {
+            return null;
+        }
+        else {
+            return selected.split("-")
+        }
+    }
+
+    function cancelJob(job) {
+        $.ajax({
+            url: "/api/v1/jobs/" + job[1] + "/_cancel",
+            type: "PUT",
+            success: function(result) {
+                if (result["success"]) {
+                    alert("alert-success", "Job was canceled.");
+                }
+                else {
+                    alert("alert-warning", "Job must be in Running state to be canceled.");
+                }
+            }
+        });
+    }
+
+    function restartJob(job) {
+        $.ajax({
+            url: "/api/v1/jobs/" + job[1] + "/_restart",
+            type: "PUT",
+            success: function(result) {
+                if (result["success"]) {
+                    alert("alert-success", "Job was restarted.");
+                }
+                else {
+                    alert("alert-warning", "Job must be in Canceled state to be restarted.");
+                }
+            }
+        });
+    }
+
+    $("body").on("contextmenu", "#table tr", function(e) {
+        contextMenu.css({
+            display: "block",
+            left: e.pageX,
+            top: e.pageY
+        });
+        selected = this.id;
+        return false;
+    });
+
+    $("body").on("click", function(e) {
+        if (contextMenu.is(":visible"))  {
+            hideContextMenu();
+        }
+    });
+
+    contextMenu.on("click", "a", function() {
+        var option = this.id;
+        var job = getSelectedJob();
+        console.log(job);
+        if (job == null) { return ;}
+
+        if (option == "li-view") {
+            location.href="/gui/" + job[0] + "/" + job[1];
+        }
+        else if (option == "li-cancel") {
+            cancelJob(job);
+        }
+        else if (option == "li-restart") {
+            restartJob(job);
+        }
+
+        hideContextMenu();
+    });
+
+});
+
+</script>
+
+
+</div>
+
 </body>
 </html>
