Refactored the way in which the Archivist and the Analyst communicate to allow for tasks to be manually killed or skipped.

--- a/archivist/src/main/resources/templates/fragments/alert.html
+++ b/archivist/src/main/resources/templates/fragments/alert.html
@@ -13,7 +13,7 @@
 <script th:inline="javascript" type="text/javascript">
     $("#alert-box").hide();
 
-    function alert(type, message) {
+    function bs_alert(type, message) {
         var alert = $("#alert-box");
         var alertMsg = $("#alert-message")
         alertMsg.text(message);
