--- a/archivist/src/main/resources/templates/import.html
+++ b/archivist/src/main/resources/templates/import.html
@@ -21,47 +21,13 @@
                 <td class="vert-align" th:text="${job.userCreated}"></td>
                 <td class="vert-align" th:text="${#dates.format(job.timeStarted, 'dd MMM yyyy HH:mm')}"></td>
                 <td class="col-md-4 vert-align">
-                    <div th:include="fragments/imports :: progress"/>
+                    <div th:include="fragments/job :: progress"/>
                 </td>
             </tr>
             </tbody>
         </table>
         <hr width="100%" class="no-margin"/>
-        <div class="container-fluid">
-            <div class="row">
-                <div id="leftContent" class="col-md-12" style="overflow-y:scroll; overflow-x:hidden;">
-                    <div th:include="fragments/tasks :: task_table"/></div>
-                <div id="rightContent" class="hidden">
-                    <div class="panel">
-                    <div class="panel-header"><h4>Assets</h4></div>
-                    <div class="panel-body">
-                        <table class="table table-striped table-condensed no-margin">
-                            <tbody>
-                            <tr><td>Total</td><td th:text="${job.stats.frameTotalCount}"></td></tr>
-                            <tr><td>Created</td><td th:text="${job.stats.frameSuccessCount}"></td></tr>
-                            <tr><td>Errors</td><td th:text="${job.stats.frameErrorCount}"></td></tr>
-                            <tr><td>Warnings</td><td th:text="${job.stats.frameWarningCount}"></td></tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    </div>
-                    <div class="panel">
-                        <div class="panel-header"><h4>Tasks</h4></div>
-                        <div class="panel-body">
-                            <table class="table table-striped table-condensed no-margin">
-                                <tbody>
-                                <tr><td>Total</td><td th:text="${job.counts.tasksTotal}"></td></tr>
-                                <tr><td>Success</td><td th:text="${job.counts.tasksSuccess}"></td></tr>
-                                <tr><td>Failure</td><td th:text="${job.counts.tasksFailure}"></td></tr>
-                                <tr><td>Waiting</td><td th:text="${job.counts.tasksWaiting}"></td></tr>
-                                <tr><td>Queued</td><td th:text="${job.counts.tasksQueued}"></td></tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div th:include="fragments/tasks :: task_table"/>
     </div>
 
     <script th:inline="javascript" type="text/javascript">
@@ -81,7 +47,6 @@
     </script>
 
     <div th:include="fragments/imports :: modal_create"/>
-    <div th:include="fragments/table :: clickable"/>
 
 </section>
 
