archivist: changed some icons on task context menu

--- a/archivist/src/main/resources/templates/fragments/tasks.html
+++ b/archivist/src/main/resources/templates/fragments/tasks.html
@@ -124,8 +124,8 @@
     <div th:include="fragments/tasks :: script_modal"/>
     <div id="contextMenu" class="dropdown clearfix">
         <ul class="dropdown-menu fa-ul" role="menu" aria-labelledby="dropdownMenu" style="display:block;position:static;margin-bottom:5px;">
-            <li><a tabindex="-1" id="li-view" href="#"><i class="glyphicon glyphicon-info-sign"></i>&nbsp;Log</a></li>
-            <li><a tabindex="-1" id="li-script" href="#"><i class="glyphicon glyphicon-info-sign"></i>&nbsp;Script</a></li>
+            <li><a tabindex="-1" id="li-view" href="#"><i class="glyphicon glyphicon-tree-conifer"></i>&nbsp;Log</a></li>
+            <li><a tabindex="-1" id="li-script" href="#"><i class="glyphicon glyphicon-wrench"></i>&nbsp;Script</a></li>
             <li class="divider"></li>
             <li><a tabindex="-1" id="li-retry" href="#">Retry</a></li>
             <li><a tabindex="-1" id="li-skip" href="#">Skip</a></li>
