--- a/archivist/src/main/resources/templates/export.html
+++ b/archivist/src/main/resources/templates/export.html
@@ -26,58 +26,10 @@
             </tbody>
         </table>
         <hr width="100%" class="no-margin"/>
-        <div class="container-fluid">
-            <div class="row">
-                <div id="leftContent" class="col-md-12" style="overflow-y:scroll; overflow-x:hidden;">
-                    <div th:include="fragments/tasks :: task_table"/></div>
-                <div id="rightContent" class="hidden">
-                    <div class="panel">
-                    <div class="panel-header"><h4>Assets</h4></div>
-                    <div class="panel-body">
-                        <table class="table table-striped table-condensed no-margin">
-                            <tbody>
-                            <tr><td>Total</td><td th:text="${job.stats.frameTotalCount}"></td></tr>
-                            <tr><td>Created</td><td th:text="${job.stats.frameSuccessCount}"></td></tr>
-                            <tr><td>Errors</td><td th:text="${job.stats.frameErrorCount}"></td></tr>
-                            <tr><td>Warnings</td><td th:text="${job.stats.frameWarningCount}"></td></tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    </div>
-                    <div class="panel">
-                        <div class="panel-header"><h4>Tasks</h4></div>
-                        <div class="panel-body">
-                            <table class="table table-striped table-condensed no-margin">
-                                <tbody>
-                                <tr><td>Total</td><td th:text="${job.counts.tasksTotal}"></td></tr>
-                                <tr><td>Success</td><td th:text="${job.counts.tasksSuccess}"></td></tr>
-                                <tr><td>Failure</td><td th:text="${job.counts.tasksFailure}"></td></tr>
-                                <tr><td>Waiting</td><td th:text="${job.counts.tasksWaiting}"></td></tr>
-                                <tr><td>Queued</td><td th:text="${job.counts.tasksQueued}"></td></tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <script th:inline="javascript" type="text/javascript">
-        $('#opener').on('click', function() {
-            var panel = $('#rightContent');
-            var table = $('#leftContent');
+        <div th:include="fragments/tasks :: task_table"/>
 
-            if (panel.hasClass("hidden")) {
-                panel.removeClass('hidden').addClass('col-md-3');
-                table.removeClass('col-md-12').addClass("col-md-9");
-            } else {
-                panel.addClass('hidden').removeClass('col-md-3');
-                table.removeClass('col-md-9').addClass("col-md-12")
-            }
-            return false;
-        });
-    </script>
+</div>
     <div th:include="fragments/table :: clickable"/>
 
 </section>
